2021-03-20  Omar Polo  <op@omarpolo.com>

	* 1.6 tagged

	* sandbox.c (sandbox_logger_process): add capsicum to the logger process

2021-03-19  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): use imsg for all IPC; only the main process
	listens for SIGHUP: this means that finally the config reload will
	work with OpenBSD' rc (and probably other service manager too)

2021-02-22  Omar Polo  <op@omarpolo.com>

	* log.c (log_request): add `log on/off' to enable/disable logs per-server or per-location

2021-02-09  Omar Polo  <op@omarpolo.com>

	* parse.y (locopt): add `require client ca' rule to require client certs signed by a specified CA

2021-02-07  Omar Polo  <op@omarpolo.com>

	* ex.c (do_exec): [cgi] split the query in words if needed and add them to the argv
	(launch_cgi): define TLS_CLIENT_NOT_BEFORE/NOT_AFTER in CGI scripts

	* parse.y (option): added prefork option

2021-02-06  Omar Polo  <op@omarpolo.com>

	* parse.y (locopt): added ``block return'' and ``strip'' options
	(servopt): add the ``entrypoint'' option

2021-02-05  Omar Polo  <op@omarpolo.com>

	* iri.c (parse_query): don't %-decode the query part.  This affects the value of QUERY_STRING for CGI scripts too, since that must be %-encoded and we're currently shipping it decoded.

2021-02-04  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): reload configuration on SIGHUP, without disconnecting the clients

2021-02-02  Omar Polo  <op@omarpolo.com>

	* server.c (handle_dirlist_head): print the header in the directory listing
	(open_file): cgi follows globbing rules, just like location and hostname matching

2021-02-01  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): require absolute paths in config file

2021-01-31  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): cgi scripts now have only std{in,out,err} open

2021-01-30  Omar Polo  <op@omarpolo.com>

	* 1.5 tagged
	* server.c: change precedence of location rules

2021-01-29  Omar Polo  <op@omarpolo.com>
